# subquery

./: .gitignore  README.md  pyproject.toml
subquery/: __init__.py  ollama_model.py  transformers_model.py
tests/: test_subquery.py
