[tool.poetry]
name = "subquery"
version = "0.1.0"
description = "A package to generate subqueries and follow-up questions"
authors = ["andthattoo <omer@firstbatch.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.transformers.dependencies]
transformers = "^4.41.2"
torch = "^2.3.0"

[tool.poetry.group.ollama.dependencies]
ollama = "^0.3.1"

[tool.poetry.extras]
transformers = ["transformers", "torch"]
ollama = ["ollama"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"